--- a/styles/media.css
+++ b/styles/media.css
@@ -3,21 +3,75 @@
     .navbar h3, .navbar-middle, .nav-button{
         display: none;
     }
+    .navbar{
+        max-width: 390px;
+        width: 100%;
+        margin: 0 auto;
+        padding: 12px 16px;
+    }
     .banner{
         display: grid;
         grid-template-columns: repeat(1,1fr);
         display: flex;
         flex-direction: column-reverse;
+        max-width: 357px;
+        width: 100%;
+        margin: 0 auto;
+        gap: 20px;
     }
     .banner-content{
         text-align: center;
     }
-    /* header{ */
-       max-width: 390px;
-        margin: 0 auto;
+    .hamburger-menu{
+        width: 30px;
+        height: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
+        margin: 20px;
     }
-    /* .banner{ */
-        width: 357px;
-        margin-left: 0;
+    .hamburger-menu span{
+        display: block;
+        height: 4px;
+        background: #222;
+        
     }
+    .banner-content h2{
+        font-size: 2rem;
+    }
+    .banner-content p{
+        font-size: 0.8rem;
+    }
+    .break-1{
+        display: none;
+    }
+    .break{
+        display: block;
+    }
+    .banner-content button{
+        width: 131px;
+        height: 42px;
+        padding: 6px 24px;
+    }
+
+}
+
+
+
+
+/* medium device */
+
+@media screen and (min-width:577px) and (max-width:992px) {
+    .banner{
+        width: 100%;
+    margin: 0 auto;
+    padding: 0 24px;
+
+}
+.navbar{
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 24px;
+}
 }
