--- a/styles/school.css
+++ b/styles/school.css
@@ -5,16 +5,18 @@
   font-weight: 400;
   font-style: normal;
 }
+.raleway-primary {
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 /* shared styles */
 .font-bold{
     font-weight: 700;
 }
 .display{
-display: flex;
-}
-.body{
-    max-width: 1440px;
-    margin: 0 auto;
+    display: flex;
 }
 .btn-primary{
     background-color: #FEA301;
@@ -29,7 +31,8 @@ display: flex;
     align-items: center;
     width: 100%;
     max-width: 1160px;
-    margin: 20px 140px;
+    margin: 20px auto;
+    padding: 0 20px;
 }
 .navbar-left{
     width: 202px;
@@ -79,17 +82,17 @@ color: rgba(17, 17, 17, 1);
     justify-content: center;
     align-items: center;
     gap: 50px;
-    margin-left: 141px;
-    /* margin-right: 141px; */
+    margin: 0 auto;
+    padding: 0 20px;
 }
 .banner-content{
     gap: 24px;
 }
 .banner-content h2{
-font-weight: 700;
-font-size: 3.5rem;
-color: #111111;
-margin-bottom: 24px;
+    font-weight: 700;
+    font-size: 3.5rem;
+    color: #111111;
+    margin-bottom: 24px;
 }
 .break{
     display: none;
@@ -174,10 +177,10 @@ margin-bottom: 24px;
     background: linear-gradient(180deg, #F2E8FF 0%, #FFFFFF 100% );
 }
 .card-3a{
-color: #8700FF;
-text-decoration: none;
-font-weight: 700;
-font-size: 0.94rem;
+    color: #8700FF;    
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 0.94rem;
 }
 .arrow-button{
     display: flex;
@@ -217,3 +220,187 @@ font-size: 0.94rem;
     transform: translateY(-3px) scale(1.06);
 
 }
+/* our stories section */
+.our-stories{
+    width: 100%;
+    background: linear-gradient(to bottom,rgba(255,255,255,0.92) 0%,rgba(254, 163, 1, 0.3) 100%),url('../assets/bg.png');
+    padding-bottom: 60px;  
+}
+.story{
+    display: flex;
+    gap: 18.73px;
+    justify-content: center;
+    margin: auto;
+    width: 367px;
+}
+.our-stories h3{
+    font-weight: 700;
+    font-size: 2.8rem;
+    color: #000000;
+    text-align: center;
+}
+.article-left{
+    border-radius: 16px;
+    background-color: #FFFFFF;
+    height: 630px;
+    display: flex;
+    flex-direction: column;
+}
+.article-left img{
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+}
+.story-header{
+    font-weight: 700;
+    font-size: 1.5rem;
+    color: #000000;
+    margin: 36.43px 38.08px 47.93px 38.35px;
+}
+.story-text{
+    font-weight: 500;
+    font-size: 0.96rem;
+    color: #666666;
+    margin: 0 68.86px 34.32px 38.35px;
+    line-height: 28.8px;
+}
+.date-pill{
+    display: inline-block;
+    background: #3CD8E8;
+    color: #FFFFFF;
+    font-weight: 500;
+    font-size: 0.96rem;
+    border-radius: 47.93px;
+    line-height: 28.8px;
+    padding: 14.38px 18.88px 15.34px 19.17px;
+    width: 174.51px;
+    height: 47.93px;
+    margin-top: -25.08px;
+    margin-left: 38.35px;
+}
+.article-1 p,.article-2 p,.article-3 p,.article-4 p{
+    font-weight: 700;
+    font-size: 0.96rem;
+    color: #000000;
+    margin: 19.17px 38.66px 28.55px 38.35px;
+    width: 214px;
+    height: 45px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.article-right{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 19.39px;
+}
+.article-1,.article-2,.article-3,.article-4{
+    border-radius: 16px;
+    background-color: #FFFFFF;
+    width: 290.69px;
+    height: 301.61px;
+}
+.article-1 img, .article-2 img, .article-3 img, .article-4 img{
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    width: 100%;
+}
+.date-pill-1, .date-pill-2, .date-pill-3, .date-pill-4{
+    display: inline-block;
+    color: #FFFFFF;
+    font-weight: 500;
+    font-size: 0.96rem;
+    border-radius: 47.93px;
+    padding: 9.59px 18.88px 10.55px 19.17px;
+    max-width: 136.46px;
+    height: 18.22px;
+    margin-left: 38.35px;
+    width: 100%;  
+}
+.date-pill-1, .date-pill-3, .date-pill-4{
+    background: rgba(149, 178, 38, 1);
+}
+.date-pill-2{
+    background: #5D58F0;
+}
+.our-stories button{
+    background-color: #111111;
+}
+.story-button{
+    justify-content: center;
+    text-align: center;
+    margin-top: 80px;
+}
+.article-down{
+    margin-top: -20px;
+}
+.media{
+    display: none;
+}
+/* footer section */
+
+.footer-section{
+    background-color: #01ACFD;
+    display: flex;
+    justify-content: center;
+    height: 519px;;
+}
+.footer-title{
+    font-weight: 700;
+    font-size: 2.6rem;
+    color: #FFFFFF;
+}
+.footer-text{
+    font-weight: 400;
+    font-size: 1.25rem;
+    color: #FFFFFF;
+}
+.footer-middle{
+    list-style: none;
+    margin-right: 143.16px;
+    margin-top: 123px;
+}
+.foot-head{
+    font-weight: 700;
+    font-size: 1.5rem;
+    color: #FFFFFF;
+    text-decoration: none;
+    margin-top: 123px;
+}
+.feet{
+    margin-bottom: 32px;
+}
+.foot-gap li{
+    margin-bottom: 20px;
+}
+.footer-link{
+    font-weight: 500;
+    font-size: 1.25rem;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.foot-right-head{
+    font-weight: 700;
+    font-size: 1.6rem;
+    color: #FFFFFF;
+    margin-top: 127px;
+}
+.footer-logo{
+    display: flex;
+    gap: 10px;
+}
+.footer-header{
+    display: flex;
+    width: 299.71px;
+    gap: 11px;
+    align-items: center;
+}
+.footer-left{
+    margin-right: 172.71px;
+    margin-top: 88px;
+}
+.footer-header img{
+    max-width: 82.9px;
+    height: 81.65px;
+   width: 100%;
+}
+
